# nanozero

./: .gitignore  AGENTS.md  CLAUDE.MD  FULL_SPEC.md  IMPROVEMENTS.md  MCTS_Comparison_Colab.ipynb  NanoZero_Colab.ipynb  README.md  Variance_Aggregation_Demo.ipynb  pyproject.toml  rust_context.md  speedrun.sh
nanozero/: __init__.py  bayesian_mcts.py  common.py  config.py  game.py  mcts.py  model.py  replay.py
nanozero-mcts-rs/: Cargo.toml  pyproject.toml
nanozero-mcts-rs/src/: batch.rs  bayesian_node.rs  bayesian_search.rs  lib.rs  math.rs  node.rs  py_mcts.rs  search.rs  transposition_table.rs  tree.rs  ucb.rs
nanozero-mcts-rs/src/game/: connect4.rs  go.rs  mod.rs  state.rs  tictactoe.rs
notebooks/: Compare_MCTS_Connect4.ipynb  MCTS_Comparison_Colab.ipynb  NanoZero_Colab.ipynb  Rust_VL_Batching_Test.ipynb  TTTS_Arena_Colab.ipynb  Visited_Only_Ablation_Colab.ipynb  Weight_Power_Ablation_Colab.ipynb  rust_mcts_benchmark.ipynb
scripts/: arena.py  benchmark_bandits.py  benchmark_mcts.py  benchmark_root_bandits.py  debug_ttts_arena.py  eval.py  play.py  trace_sign_error.py  train.py  train_bayesian.py
scripts/archive/: analyze_ttts_issue.py  arena_comprehensive.py  compare_nn_values.py  compare_search_evolution.py  diagnose_high_sims.py  diagnose_ttts.py  quick_arena_test.py  test_ttts_controlled.py  test_variance_params.py  trace_action3_subtree.py  trace_aggregation.py  trace_aggregation_dilution.py  trace_deep_backup.py  trace_detailed_backup.py  trace_one_backup.py  trace_perspectives.py  trace_single_sim.py  trace_variance_propagation.py
tests/: test_bandit_algorithms.py  test_bayesian_mcts.py  test_common.py  test_game.py  test_replay.py  test_transposition_table.py
