[package]
name = "nanozero-mcts-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust backend for NanoZero MCTS"
license = "MIT"

[lib]
name = "nanozero_mcts_rs"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Efficient small vectors for paths
smallvec = "1.11"

# Fast math (erff for normal_cdf)
libm = "0.2"

[dev-dependencies]
# For property-based testing
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
